# danube-connect

./: .gitignore  Cargo.toml  PUBLISHING.md  README.md  SETUP.md
connectors/sink-deltalake/: Cargo.toml  Dockerfile  README.md
connectors/sink-deltalake/config/: connector-azure.toml  connector-gcs.toml  connector-s3-minio.toml
connectors/sink-deltalake/src/: connector.rs  record.rs
connectors/sink-qdrant/: Cargo.toml  Dockerfile  README.md
connectors/sink-qdrant/config/: README.md  connector-multi-topic.toml  connector.toml
connectors/sink-qdrant/src/: config.rs  connector.rs  transform.rs
connectors/sink-surrealdb/: Cargo.toml  Dockerfile  README.md
connectors/sink-surrealdb/config/: README.md  connector-multi-topic.toml  connector.toml
connectors/sink-surrealdb/src/: config.rs  connector.rs  record.rs
connectors/source-mqtt/: .implementation-summary.md  Cargo.toml  DEVELOPMENT.md  Dockerfile  QUICKSTART.md  README.md  config.example.env  docker-compose.example.yml
connectors/source-mqtt/src/: config.rs  connector.rs  main.rs
connectors/source-webhook/: Cargo.toml  Dockerfile  IMPLEMENTATION_PLAN.md
connectors/source-webhook/config/: README.md  connector.toml
connectors/source-webhook/src/: config.rs  connector.rs  server.rs
danube-connect-common/: Cargo.toml
danube-connect-common/src/: lib.rs
danube-connect-core/: Cargo.toml  README.md
danube-connect-core/examples/: EXAMPLES.md  README.md  simple_sink.rs  simple_source.rs
danube-connect-core/src/: config.rs  lib.rs  message.rs  metrics.rs  runtime.rs  traits.rs
danube-connect-core/src/runtime/: sink_runtime.rs  source_runtime.rs
docker/: docker-compose.yml
examples/: README.md
examples/sink-qdrant/: .env.example  .gitignore  README.md  connector-multi-topic.toml  docker-compose.yml  search_vectors.py  test_producer.sh
examples/sink-surrealdb/: .gitignore  README.md  connector.toml
examples/source-mqtt/: README.md  connector.toml  docker-compose.yml  test-publisher.sh
examples/source-webhook/: README.md  docker-compose.yml
info/: CONNECTORS_README.md  README.md  connector-core-architecture.md  connector-development-guide.md  connector-message-patterns.md  connector-roadmap.md  connector-rpc-integration.md  connectors.md
scripts/: test-connector.sh
