[workspace]
resolver = "2"
members = [
    "danube-connect-core",
    "connectors/source-mqtt",
]

[workspace.dependencies]
# Core dependencies from danube
tokio = { version = "1.48", features = ["full"] }
async-trait = "0.1.89"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
thiserror = "1.0.69"
rand = "0.9.2"
metrics = "0.24.2"
anyhow = "1.0"
tempfile = "3.23"

# Danube dependencies (from crates.io)
danube-client = "0.5.2"
danube-core = "0.5.2"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
