[workspace]
resolver = "2"
members = [
    "danube-connect-core",
    "connectors/source-mqtt",
    "connectors/source-webhook",
    "connectors/sink-qdrant",
    "connectors/sink-surrealdb",
]

[workspace.dependencies]
# Async Runtime
tokio = { version = "1.48", features = ["full"] }
async-trait = "0.1.89"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Logging
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }

# Error Handling
thiserror = "1.0.69"
anyhow = "1.0"

# Utilities
chrono = "0.4"
uuid = { version = "1.0", features = ["v4", "serde"] }
base64 = "0.22"
rand = "0.9.2"

# Metrics
metrics = "0.24.2"

# HTTP/Web (for connectors that need it)
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors", "timeout"] }
hyper = "1.8"

# Security/Crypto (for connectors that need it)
hmac = "0.12"
sha2 = "0.10"
jsonwebtoken = { version = "10.2", features = ["rust_crypto"] }

# Rate Limiting (for connectors that need it)
tower_governor = "0.8"
governor = "0.10"

# Testing
tempfile = "3.23"

# Danube dependencies (from crates.io)
danube-client = "0.5.2"
danube-core = "0.5.2"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
