[package]
name = "danube-connect-common"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Common utilities for Danube connectors"
keywords = ["danube", "messaging", "connector"]
categories = ["network-programming"]

[dependencies]
# Workspace dependencies
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true

# Additional dependencies
bytes = "1.5"

[dev-dependencies]
