[package]
name = "danube-connect-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core SDK for building Danube connectors"
keywords = ["danube", "messaging", "connector", "integration"]
categories = ["network-programming", "asynchronous"]

[dependencies]
# Workspace dependencies
tokio = { workspace = true, features = ["full"] }
async-trait.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
thiserror.workspace = true
metrics.workspace = true
rand.workspace = true

# Additional dependencies
toml = "0.8"

# Danube dependencies
danube-client = { workspace = true }
danube-core = { workspace = true }

[dev-dependencies]
tempfile.workspace = true
tokio-test = "0.4"

[features]
default = []
# Future: Add features for optional functionality
