[package]
name = "danube-connect-core"
version = "0.2.0"
edition = "2021"
rust-version = "1.70"
authors = ["Dan Rusei <dan.rusei@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/danube-messaging/danube-connect"
documentation = "https://docs.rs/danube-connect-core"
description = "Core SDK for building Danube connectors"
keywords = ["danube", "messaging", "connector", "integration"]

[dependencies]
# Workspace dependencies
tokio = { workspace = true, features = ["full"] }
async-trait.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
thiserror.workspace = true
metrics.workspace = true
rand.workspace = true

# Additional dependencies
toml = "0.8"

# Danube dependencies
danube-client = { workspace = true }
danube-core = { workspace = true }

[dev-dependencies]
tempfile.workspace = true
tokio-test = "0.4"

[features]
default = []
# Future: Add features for optional functionality
