[package]
name = "danube-connect-core"
version = "0.3.1"
edition = "2021"
rust-version = "1.70"
authors = ["Dan Rusei <dan.rusei@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/danube-messaging/danube-connect"
documentation = "https://docs.rs/danube-connect-core"
description = "Core SDK for building Danube connectors"
keywords = ["danube", "messaging", "connector", "integration"]

[dependencies]
# Async Runtime
tokio = { workspace = true }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Error Handling
thiserror = { workspace = true }

# Utilities
base64 = { workspace = true }
rand = { workspace = true }

# Metrics
metrics = { workspace = true }

# Danube dependencies
danube-client = { workspace = true }
danube-core = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio-test = "0.4"

[features]
default = []
# Future: Add features for optional functionality
