[package]
name = "danube-sink-deltalake"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["Danube Connect Contributors"]
description = "Delta Lake Sink Connector for Danube Connect - Stream events into Delta Lake tables"
license = "MIT OR Apache-2.0"
repository = "https://github.com/danrusei/danube-connect"
keywords = ["danube", "deltalake", "streaming", "connector", "datalake"]
categories = ["database", "network-programming"]

[dependencies]
# Danube integration
danube-connect-core = { path = "../../danube-connect-core" }

# Delta Lake (connector-specific) - All cloud providers enabled
# Note: datafusion feature NOT needed for basic append/overwrite operations
deltalake = { version = "0.29", features = ["s3", "azure", "gcs"] }

# Arrow ecosystem (must match deltalake's arrow version - 56.2 for deltalake 0.29)
arrow = "56.2"

# Async Runtime
tokio = { workspace = true }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Error Handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Utilities
chrono = { workspace = true }
url = "2.5"

[dev-dependencies]
tokio-test = "0.4"
danube-core = { workspace = true }

[[bin]]
name = "danube-sink-deltalake"
path = "src/main.rs"
