[package]
name = "danube-sink-qdrant"
version = "0.1.0"
edition = "2021"
authors = ["Dan Rusei <dan.rusei@gmail.com>"]
description = "Qdrant sink connector for Danube Connect - streaming vector embeddings to Qdrant"
license = "Apache-2.0"
repository = "https://github.com/danube-messaging/danube-connect"

[dependencies]
# Core connector framework
danube-connect-core = { path = "../../danube-connect-core" }

# Qdrant client
qdrant-client = "1.16.0"

# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
sha2 = "0.10"  # For point ID hashing

[dev-dependencies]
danube-core = "0.5.2"  # For tests

[[bin]]
name = "danube-sink-qdrant"
path = "src/main.rs"
