[package]
name = "danube-sink-qdrant"
version = "0.1.4"
edition = "2021"
authors = ["Dan Rusei <dan.rusei@gmail.com>"]
description = "Qdrant sink connector for Danube Connect - streaming vector embeddings to Qdrant"
license = "Apache-2.0"
repository = "https://github.com/danube-messaging/danube-connect"

[dependencies]
# Danube integration
danube-connect-core = { path = "../../danube-connect-core" }

# Qdrant client (connector-specific)
qdrant-client = "1.14.1"

# Async Runtime
tokio = { workspace = true }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Utilities
sha2 = { workspace = true }

[dev-dependencies]
danube-core = { workspace = true }

[[bin]]
name = "danube-sink-qdrant"
path = "src/main.rs"
