[package]
name = "danube-sink-surrealdb"
version = "0.1.2"
edition = "2021"
rust-version = "1.75"
authors = ["Danube Connect Contributors"]
description = "SurrealDB Sink Connector for Danube Connect - Stream events into SurrealDB"
license = "MIT OR Apache-2.0"
repository = "https://github.com/danrusei/danube-connect"
keywords = ["danube", "surrealdb", "streaming", "connector", "database"]
categories = ["database", "network-programming"]

[dependencies]
# Danube integration
danube-connect-core = { path = "../../danube-connect-core" }

# SurrealDB client (connector-specific)
surrealdb = { version = "2.4", features = ["protocol-ws", "protocol-http"] }

# Async Runtime
tokio = { workspace = true }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Error Handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Utilities
chrono = { workspace = true }
base64 = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
danube-core = { workspace = true }

[[bin]]
name = "danube-sink-surrealdb"
path = "src/main.rs"
