[package]
name = "danube-source-mqtt"
version = "0.1.0"
edition = "2021"
authors = ["Danube Team"]
description = "MQTT source connector for Danube Connect"
license = "Apache-2.0"

[[bin]]
name = "danube-source-mqtt"
path = "src/main.rs"

[dependencies]
# Core connector framework
danube-connect-core = { path = "../../danube-connect-core" }
# Danube dependencies
danube-client = { workspace = true }
danube-core = { workspace = true }

# MQTT client
rumqttc = "0.24"

# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Configuration
toml = "0.8"

[dev-dependencies]
mockall = "0.12"
