[package]
name = "danube-source-mqtt"
version = "0.1.2"
edition = "2021"
authors = ["Danube Team"]
description = "MQTT source connector for Danube Connect"
license = "Apache-2.0"

[[bin]]
name = "danube-source-mqtt"
path = "src/main.rs"

[dependencies]
# Core connector framework
danube-connect-core = { path = "../../danube-connect-core" }

# MQTT client - v0.25.1 includes enhanced MQTT v5 support
rumqttc = "0.25.1"

# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Configuration
toml = "0.8"

[dev-dependencies]
mockall = "0.12"
