[package]
name = "danube-source-mqtt"
version = "0.1.2"
edition = "2021"
authors = ["Danube Team"]
description = "MQTT source connector for Danube Connect"
license = "Apache-2.0"

[[bin]]
name = "danube-source-mqtt"
path = "src/main.rs"

[dependencies]
# Danube integration
danube-connect-core = { path = "../../danube-connect-core" }

# MQTT client (connector-specific)
rumqttc = "0.25.1"

# Async Runtime
tokio = { workspace = true }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Error Handling
anyhow = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
mockall = "0.12"
